# trex

./: .gitmodules  README.md
autonomy/: CMakeLists.txt  package.xml
autonomy/launch/: exp.launch  playback.launch
autonomy/params/: pre-defined-path.txt
autonomy/src/: autonomous.py  cam_detect.py  camc_detect.py  camera_visualize.py  camg_detect.py  debug_camg_cov_glo.txt  debug_cov.txt  debug_cov_rv.txt  debug_cov_tv.txt  debug_gain.txt  debug_lidar_cov_glo.txt  debug_lm_cov.txt  debug_new_state.txt  debug_rl_cov.txt  findbox.py  idwrench2.py  image_pub.py  lidar_covariance.py  lidar_detect.py  localize_wrench.py  localize_wrench_exp.py  ocs_logger.py  playback.sh  record_bag  record_bag.sh  record_sensor_bag.sh  robot_correction.py  sim_loc.py  simultaneous_localization.py  target_joint_likelihood.py  target_localization.py  target_odom.py  tf_broadcaster.py
camera_proc/: CMakeLists.txt  package.xml
camera_proc/launch/: camera_proc.launch
camera_proc/src/: color_proc.cpp  color_proc_sim.cpp
gripper/gripper_control/script/: reset.py  start.py
gripper/gripper_description/meshes/: base_link.stl
gripper/gripper_description/urdf/: gripper.urdf  gripper.urdf.xacro
gripper/gripper_gazebo/launch/: spawn_gripper.launch
gripper/gripper_gazebo/urdf/: gripper.gazebo.xacro
tele_controller/: CMakeLists.txt  package.xml
tele_controller/scripts/: base_controller.cpp  base_controller2.cpp  base_controller3.cpp  joy_teleop.py  joy_teleop2.py  log_data.cpp
trex_control/: CMakeLists.txt  package.xml  trex_motor.ino
trex_control/config/: localization.yaml  localization_reconstruct.yaml  localization_simulation.yaml  robot_localization.yaml  target_localization.yaml  trex_control.yaml  trex_ekf.yaml
trex_control/launch/: teleop.launch  trex_control.launch  trex_hw.launch
trex_control/scripts/: arm_kalman_move.py  manipulate_goal.py  move_arm_topic.py  move_arm_topic_phys.py  robot_mv_cmds.py  stow_ur5.py  trex_teleop.py  work_ur5.py
trex_description/: CMakeLists.txt  package.xml
trex_description/config/: laserscan_filter.yaml
trex_description/launch/: description.launch  move_base.launch  velodyne.launch
trex_description/rviz/: trex.rviz
trex_description/urdf/: macros.xacro  materials.xacro  trex.gazebo  trex.xacro
trex_description/urdf/accessories/: kinectv2_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
trex_gazebo/: CMakeLists.txt  package.xml
trex_gazebo/launch/: jfr_reprocess_sim.launch  jfr_simulation.launch  playpen_sawyer.launch  playpen_trex.launch  playpen_ur5.launch  trex_control.launch  trex_spawn.launch  trex_world.launch
trex_gazebo/models/border/: border.sdf  model.config
trex_gazebo/models/border/materials/scripts/: border.material
trex_gazebo/models/border/meshes/: border.DAE
trex_gazebo/models/panel/: model.sdf
trex_gazebo/models/panel/meshes/: panel.dae
trex_gazebo/worlds/: mbzirc_arena_task_2.world  target_playpen.world  target_playpen_2.world  target_playpen_3.world
trex_maps/: CMakeLists.txt  package.xml
trex_navigation/: CMakeLists.txt  package.xml
trex_navigation/config/: costmap_common.yaml  move_base.yaml  planner.yaml
trex_navigation/launch/: ccam_navigation.launch  ccam_navigation_sim.launch  exploration.launch  exploration_demo.launch  gmapping.launch  trex_nav.launch
trex_navigation/launch/include/: amcl.launch.xml  move_base.launch.xml
trex_sawyer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
trex_sawyer_moveit_config/config/: fake_controllers.yaml  trex_sawyer.srdf
trex_sawyer_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  trex_sawyer_moveit_controller_manager.launch.xml  warehouse.launch
trex_ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
trex_ur5_moveit/config/: trex.srdf
trex_ur5_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  trex_moveit_controller_manager.launch.xml  trex_moveit_sensor_manager.launch.xml  trex_ur5_planning_execution.launch  warehouse.launch
