<?xml version="1.0"?>
<package>
  <name>autonomy</name>
  <version>0.0.0</version>
  <description>The autonomy package</description>

  <maintainer email="johodges@todo.todo">johodges</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
