<?xml version="1.0"?>
<package>
  <name>camera_proc</name>
  <version>0.1.0</version>
  <description>The jfr_camera_work package</description>
  <maintainer email="karim@vt.edu">karim</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roslaunch</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>tf2</build_depend>
<build_depend>tf2_ros</build_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>image_transport</run_depend>
<run_depend>message_runtime</run_depend>

</package>
