<?xml version="1.0"?>
<package>
  <name>trex_control</name>
  <version>0.0.0</version>
  <description>The trex_control package</description>
  <maintainer email="karim@vt.edu">karim</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/johodges/trex</url>
  <author email="karim@vt.edu">karim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>topic_tools</run_depend>

  <export>
  </export>
</package>
