<?xml version="1.0"?>
<package>
  <name>trex_navigation</name>
  <version>0.2.7</version>
  <description>Autonomous mapping and navigation Virginia Tech TREX</description>

  <author email="karim@vt.edu">karim</author>
  <maintainer email="karim@vt.edu">karim</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/trex_navigation</url>
  <url type="bugtracker">https://github.com/johodges/trex/issues</url>
  <url type="repository">https://github.com/johodges/trex</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
